--- a/src/ui/component/feed/FeedSummary.pug
+++ b/src/ui/component/feed/FeedSummary.pug
@@ -51,10 +51,8 @@ svelte:head
 			title {info?.display_name || subreddit_name}
 		{:else if user_name}
 			title u/{info?.name || user_name}
-article.feed-summary
-	{#if loading}
-		p Loading...
-	{:else if error}
+{#if error}
+	article.feed-summary
 		{#if error.code === 403}
 			{#if multireddit_name}
 				Status(type='error' message="Only approved users can access this multireddit." title="Private multireddit")
