--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -28,6 +28,7 @@ script.
 	export focus_comment_id = null
 	export focus_comment_parent_count = null
 	export id = null
+	export minimized = false
 	export out_of_context = false
 
 	banning = false
@@ -160,7 +161,7 @@ svelte:head
 						{#if post.upvote_ratio < 0.7}
 							span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
 				UserByline(distinguish={post.distinguished} flair_color={post.author_flair_background_color} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author})
-		article.post(data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)} title="{Time.sToAbsRelTimeStr(post.created_utc)} ({Time.sToAbsTimeStr(post.created_utc)}){post.edited ? ', edited ' + Time.sToAbsRelTimeStr(post.edited) : ''}")
+		article.post(class:post-minimized={minimized} data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)} title="{Time.sToAbsRelTimeStr(post.created_utc)} ({Time.sToAbsTimeStr(post.created_utc)}){post.edited ? ', edited ' + Time.sToAbsRelTimeStr(post.edited) : ''}")
 			header.post-header
 				{#if out_of_context}
 					FeedLink(type='subreddit' subreddit_name={post.subreddit})
@@ -352,11 +353,12 @@ style.
 		:global(& img)
 			border-radius 1em
 	.post-title
-		font-size 1.1666em
-		font-weight var(--f-wght-normal) !important
+		font-size 1.5em
+		font-weight var(--f-wght-normal)
+		letter-spacing 0
 		line-height 1.2
 		overflow-wrap anywhere
-		.post-and-comments-expanded &
-			font-size 1.5em
-			font-weight var(--f-wght-strong)
-			letter-spacing 0
+		.post-minimized &
+			font-size 1.1666em
+			letter-spacing inherit
+			line-height 1.2
