--- a/src/ui/component/user/UserByline.pug
+++ b/src/ui/component/user/UserByline.pug
@@ -9,14 +9,14 @@ script.
 
 	distinguish_text = (distinguish) ->
 		switch distinguish
-			when 'admin' then '(Admin) '
-			when 'moderator' then '(Mod) '
-			when 'special' then '(Ex-Admin)'
-			when 'submitter' then '(OP) '
+			when 'admin' then ' (Admin)'
+			when 'moderator' then ' (Mod)'
+			when 'special' then ' (Ex-Admin)'
+			when 'submitter' then ' (OP)'
 			else ''
 
 address.user-byline
-	a.user-byline-name(href='/u/{name}') {distinguish_text(distinguish)}{name}
+	a.user-byline-name(href='/u/{name}') {name}{distinguish_text(distinguish)}
 	{#if flair_text}
 		UserFlair(color={flair_color} emoji_style='image' rich_text={flair_rich_text} text={flair_text})
 
@@ -26,7 +26,6 @@ style.
 		color var(--c-text-weak)
 		display flex
 		font-size 12px
-		letter-spacing 0.333px
 		line-height 1
 		gap 1ch
 		overflow hidden
