post: fix x-overflow with very long user flairs

--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -265,6 +265,8 @@ style.
 		background var(--c-tint-normal)
 		border-radius 1em
 		width 100%
+	.post-and-comments
+		width 100%
 	.post-body
 		align-items flex-start
 		display flex
