--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -297,7 +297,7 @@ summary
 input[type='text']
 	cursor initial
 summary
-	background var(--c-blend-weak)
+	background var(--c-shade-weak)
 	border-radius 11px
 	display inline-flex
 	margin 1em 0 0
