internals: improve component folder organization

--- a/src/ui/component/account/LogoutButton.pug
+++ b/src/ui/component/account/LogoutButton.pug
@@ -1,6 +1,6 @@
 script.
 	import api from '../../../../api/index.js'
 
-	import Button from '../../common/Button.pug'
+	import Button from '../../generic/Button.pug'
 
 Button(action={() => { api.logout(); location.reload() }} text='Logout')
