--- a/src/ui/component/collection/CollectionAvatar.pug
+++ b/src/ui/component/collection/CollectionAvatar.pug
@@ -1,5 +1,5 @@
 script.
-	import api from '../../../../api/index.js'
+	import api from '../../../api/index.js'
 
 	export id = null
 	export size = 'medium'
