--- a/src/ui/component/collection/CollectionInfo.pug
+++ b/src/ui/component/collection/CollectionInfo.pug
@@ -1,6 +1,6 @@
 script.
-	import api from '../../../../api/index.js'
-	import FeedLink from '../FeedLink.pug'
+	import api from '../../../api/index.js'
+	import FeedLink from '../feed/FeedLink.pug'
 
 	export id = null
 	
