--- a/src/ui/component/comment/CommentEditor.pug
+++ b/src/ui/component/comment/CommentEditor.pug
@@ -3,8 +3,8 @@ script.
 	
 	import api from '../../../api/index.js'
 
-	import Button from '../common/Button.pug'
-	import Label from '../common/Label.pug'
+	import Button from '../generic/Button.pug'
+	import Label from '../generic/Label.pug'
 	import UserByline from '../user/UserByline.pug'
 
 	export error = null
