--- a/src/ui/component/feed/FeedLink.pug
+++ b/src/ui/component/feed/FeedLink.pug
@@ -1,9 +1,9 @@
 script.
 	import { format_url } from '../../url/index.js'
 
-	import CollectionAvatar from './collection/CollectionAvatar.pug'
-	import MultiredditAvatar from './multireddit/MultiredditAvatar.pug'
-	import SubredditAvatar from './subreddit/SubredditAvatar.pug'
+	import CollectionAvatar from '../collection/CollectionAvatar.pug'
+	import MultiredditAvatar from '../multireddit/MultiredditAvatar.pug'
+	import SubredditAvatar from '../subreddit/SubredditAvatar.pug'
 	import UserAvatar from '../user/UserAvatar.pug'
 
 	export collection_id = null
