--- a/src/ui/component/feed/FeedSearchOptions.pug
+++ b/src/ui/component/feed/FeedSearchOptions.pug
@@ -4,10 +4,10 @@ script.
 	import api from '../../../api/index.js'
 	import { format_url } from '../../url/index.js'
 
-	import Button from '../common/Button.pug'
-	import Popup from '../common/Popup.pug'
-	import SubredditWidget from './subreddit/SubredditWidget.pug'
-	import TextInput from '../common/TextInput.pug'
+	import Button from '../generic/Button.pug'
+	import Popup from '../generic/Popup.pug'
+	import SubredditWidget from '../subreddit/SubredditWidget.pug'
+	import TextInput from '../generic/TextInput.pug'
 
 	export multireddit_name = null
 	export search_sort = null
