--- a/src/ui/component/feed/FeedSummary.pug
+++ b/src/ui/component/feed/FeedSummary.pug
@@ -3,8 +3,7 @@ script.
 
 	import api from '../../../api/index.js'
 	
-	import Feed from './Feed.pug'
-	import Status from '../common/Status.pug'
+	import Status from '../generic/Status.pug'
 
 	export collection_id = null
 	export multireddit_name = null
