--- a/src/ui/component/generic/Button.pug
+++ b/src/ui/component/generic/Button.pug
@@ -1,5 +1,5 @@
 script.
-	import { hotkey } from '../../action/hotkeys.coffee'
+	import { hotkey } from './action/hotkeys.coffee'
 
 	import HotkeyLabel from './HotkeyLabel.pug'
 	
