--- a/src/ui/component/generic/Popup.pug
+++ b/src/ui/component/generic/Popup.pug
@@ -1,7 +1,7 @@
 script.
 	import { createEventDispatcher } from 'svelte'
 	
-	import { virtual_hotkeys } from '../../action/hotkeys.coffee'
+	import { virtual_hotkeys } from './action/hotkeys.coffee'
 
 	dispatch = createEventDispatcher()
 	hotkeys =
