--- a/src/ui/component/multireddit/MultiredditInfo.pug
+++ b/src/ui/component/multireddit/MultiredditInfo.pug
@@ -1,8 +1,8 @@
 script.
-	import api from '../../../../api/index.js'
+	import api from '../../../api/index.js'
 
-	import FeedLink from '../FeedLink.pug'
-	import FormattedHTML from '../../common/FormattedHTML.pug'
+	import FeedLink from '../feed/FeedLink.pug'
+	import FormattedHTML from '../generic/FormattedHTML.pug'
 	import MultiredditAvatar from './MultiredditAvatar.pug'
 	import SubredditWidget from '../subreddit/SubredditWidget.pug'
 
