--- a/src/ui/component/post/PostVideoPlayer.pug
+++ b/src/ui/component/post/PostVideoPlayer.pug
@@ -2,10 +2,10 @@ script.
 	import { onMount } from 'svelte'
 
 	import { Time } from '../../../lib/index.js'
-	import { virtual_hotkeys } from '../../action/hotkeys.coffee'
+	import { virtual_hotkeys } from '../generic/action/hotkeys.coffee'
 	import AccountState from '../../state/AccountState.coffee'
 	
-	import Button from '../common/Button.pug'
+	import Button from '../generic/Button.pug'
 	
 	export audio_url = null
 	export height = 480
