--- a/src/ui/component/subreddit/SubredditAvatar.pug
+++ b/src/ui/component/subreddit/SubredditAvatar.pug
@@ -1,5 +1,5 @@
 script.
-	import api from '../../../../api/index.js'
+	import api from '../../../api/index.js'
 	
 	export icon_url = null
 	export name = null
