--- a/src/ui/component/subreddit/SubredditBanMenu.pug
+++ b/src/ui/component/subreddit/SubredditBanMenu.pug
@@ -1,7 +1,7 @@
 script.
 	import { createEventDispatcher } from 'svelte'
 	
-	import TextInput from '../../common/TextInput.pug'
+	import TextInput from '../generic/TextInput.pug'
 
 	ban_lengths = [
 		{ label: 'A day', value: 1 }
