--- a/src/ui/component/subreddit/SubredditInfo.pug
+++ b/src/ui/component/subreddit/SubredditInfo.pug
@@ -1,9 +1,9 @@
 script.
-	import api from '../../../../api/index.js'
+	import api from '../../../api/index.js'
 
-	import ButtonGroup from '../../common/ButtonGroup.pug'
-	import FormattedHTML from '../../common/FormattedHTML.pug'
-	import Status from '../../common/Status.pug'
+	import ButtonGroup from '../generic/ButtonGroup.pug'
+	import FormattedHTML from '../generic/FormattedHTML.pug'
+	import Status from '../generic/Status.pug'
 	import SubredditAvatar from './SubredditAvatar.pug'
 	import SubredditRules from './SubredditRules.pug'
 	import SubredditWidget from './SubredditWidget.pug'
