--- a/src/ui/component/subreddit/SubredditNavigation.pug
+++ b/src/ui/component/subreddit/SubredditNavigation.pug
@@ -1,6 +1,6 @@
 script.
-	import api from '../../../../api/index.js'
-	import { relativize_url } from '../../../url/index.js'
+	import api from '../../../api/index.js'
+	import { relativize_url } from '../../url/index.js'
 	
 	export name = null
 
