--- a/src/ui/component/subreddit/SubredditReportMenu.pug
+++ b/src/ui/component/subreddit/SubredditReportMenu.pug
@@ -1,10 +1,10 @@
 script.
 	import { createEventDispatcher } from 'svelte'
 
-	import api from '../../../../api/index.js'
+	import api from '../../../api/index.js'
 	
-	import FormattedHTML from '../../common/FormattedHTML.pug'
-	import TextInput from '../../common/TextInput.pug'
+	import FormattedHTML from '../generic/FormattedHTML.pug'
+	import TextInput from '../generic/TextInput.pug'
 	
 	export subreddit_name = null
 	export target_type = null
