--- a/src/ui/component/subreddit/SubredditRules.pug
+++ b/src/ui/component/subreddit/SubredditRules.pug
@@ -1,8 +1,8 @@
 script.
-	import api from '../../../../api/index.js'
+	import api from '../../../api/index.js'
 	
-	import Status from '../../common/Status.pug'
-	import FormattedHTML from '../../common/FormattedHTML.pug'
+	import Status from '../generic/Status.pug'
+	import FormattedHTML from '../generic/FormattedHTML.pug'
 
 	export name = null
 	
