--- a/src/ui/component/subreddit/SubredditWidget.pug
+++ b/src/ui/component/subreddit/SubredditWidget.pug
@@ -1,11 +1,11 @@
 script.
-	import { Time } from '../../../../lib/index.js'
-	import { format_url, relativize_url } from '../../../url/index.js'
+	import { Time } from '../../../lib/index.js'
+	import { format_url, relativize_url } from '../../url/index.js'
 	
-	import Button from '../../common/Button.pug'
-	import FeedLink from '../FeedLink.pug'
-	import FormattedHTML from '../../common/FormattedHTML.pug'
-	import PostFlair from '../../post/PostFlair.pug'
+	import Button from '../generic/Button.pug'
+	import FeedLink from '../feed/FeedLink.pug'
+	import FormattedHTML from '../generic/FormattedHTML.pug'
+	import PostFlair from '../post/PostFlair.pug'
 
 	export widget = null
 
