--- a/src/ui/component/user/UserInfo.pug
+++ b/src/ui/component/user/UserInfo.pug
@@ -4,7 +4,7 @@ script.
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
 
-	import Status from '../common/Status.pug'
+	import Status from '../generic/Status.pug'
 	import UserAvatar from './UserAvatar.pug'
 	
 	export name = null
