--- a/src/ui/component/account/LoginButton.pug
+++ b/src/ui/component/account/LoginButton.pug
@@ -1,7 +1,7 @@
 script.
 	import api from '../../../../api/index.js'
 
-	import Button from '../../common/Button.pug'
+	import Button from '../../generic/Button.pug'
 
 	scopes = [
 		'account'
