--- a/src/ui/component/feed/Feed.pug
+++ b/src/ui/component/feed/Feed.pug
@@ -4,13 +4,13 @@ script.
 
 	import AccountState from '../../state/AccountState.coffee'
 	
-	import Button from '../common/Button.pug'
-	import Comment from '../post/Comment.pug'
+	import Button from '../generic/Button.pug'
+	import Comment from '../comment/Comment.pug'
 	import FeedLink from './FeedLink.pug'
-	import Label from '../common/Label.pug'
+	import Label from '../generic/Label.pug'
 	import Message from '../message/Message.pug'
 	import Post from '../post/Post.pug'
-	import Status from '../common/Status.pug'
+	import Status from '../generic/Status.pug'
 
 	export collection_id = null
 	export filter = null
