--- a/src/ui/component/feed/FeedFilterOptions.pug
+++ b/src/ui/component/feed/FeedFilterOptions.pug
@@ -3,7 +3,7 @@ script.
 
 	import { apply_query_parameters } from '../../url/index.js'
 
-	import Checkbox from '../common/Checkbox.pug'
+	import Checkbox from '../generic/Checkbox.pug'
 
 	export filter = null
 
