--- a/src/ui/component/feed/FeedSortOptions.pug
+++ b/src/ui/component/feed/FeedSortOptions.pug
@@ -4,7 +4,7 @@ script.
 	import api from '../../../api/index.js'
 	import { format_url } from '../../url/index.js'
 
-	import Button from '../common/Button.pug'
+	import Button from '../generic/Button.pug'
 
 	export filter = null
 	export multireddit_name = null
