--- a/src/ui/component/post/PostComments.pug
+++ b/src/ui/component/post/PostComments.pug
@@ -2,8 +2,8 @@ script.
 	import { setContext } from 'svelte'
 
 	import api from '../../../api/index.js'
-	import Button from '../common/Button.pug'
-	import Comment from './Comment.pug'
+	import Button from '../generic/Button.pug'
+	import Comment from '../comment/Comment.pug'
 	
 	export focus_comment_id = null
 	export focus_comment_parent_count = null
