--- a/src/ui/global.styl
+++ b/src/ui/global.styl
@@ -3,12 +3,12 @@
 	font-family 'Inter'
 	font-style normal
 	font-weight 100 900
-	src url('./font/inter_v4.woff2')
+	src url('./asset/inter_v4.woff2')
 @font-face
 	font-family 'Inter'
 	font-style italic
 	font-weight 100 900
-	src url('./font/inter_v4_i.woff2')
+	src url('./asset/inter_v4_i.woff2')
 
 // Baseline resets
 *
