--- a/src/ui/layout/LayoutStandard.pug
+++ b/src/ui/layout/LayoutStandard.pug
@@ -1,22 +1,22 @@
 script.
-	import api from '../api/index.js'
+	import api from '../../api/index.js'
 	
-	import CollectionAvatar from './component/collection/CollectionAvatar.pug'
-	import CollectionInfo from './component/collection/CollectionInfo.pug'
-	import Feed from './component/feed/Feed.pug'
-	import FeedFilterOptions from './component/feed/FeedFilterOptions.pug'
-	import FeedSearchOptions from './component/feed/FeedSearchOptions.pug'
-	import FeedSortOptions from './component/feed/FeedSortOptions.pug'
-	import FeedSummary from './component/feed/FeedSummary.pug'
-	import MultiredditAvatar from './component/multireddit/MultiredditAvatar.pug'
-	import MultiredditInfo from './component/multireddit/MultiredditInfo.pug'
-	import Post from './component/post/Post.pug'
-	import SubredditAvatar from './component/subreddit/SubredditAvatar.pug'
-	import SubredditInfo from './component/subreddit/SubredditInfo.pug'
-	import SubredditNavigation from './component/subreddit/SubredditNavigation.pug'
-	import SubredditWikipage from './component/subreddit/SubredditWikipage.pug'
-	import UserAvatar from './component/user/UserAvatar.pug'
-	import UserInfo from './component/user/UserInfo.pug'
+	import CollectionAvatar from '../component/collection/CollectionAvatar.pug'
+	import CollectionInfo from '../component/collection/CollectionInfo.pug'
+	import Feed from '../component/feed/Feed.pug'
+	import FeedFilterOptions from '../component/feed/FeedFilterOptions.pug'
+	import FeedSearchOptions from '../component/feed/FeedSearchOptions.pug'
+	import FeedSortOptions from '../component/feed/FeedSortOptions.pug'
+	import FeedSummary from '../component/feed/FeedSummary.pug'
+	import MultiredditAvatar from '../component/multireddit/MultiredditAvatar.pug'
+	import MultiredditInfo from '../component/multireddit/MultiredditInfo.pug'
+	import Post from '../component/post/Post.pug'
+	import SubredditAvatar from '../component/subreddit/SubredditAvatar.pug'
+	import SubredditInfo from '../component/subreddit/SubredditInfo.pug'
+	import SubredditNavigation from '../component/subreddit/SubredditNavigation.pug'
+	import SubredditWikipage from '../component/subreddit/SubredditWikipage.pug'
+	import UserAvatar from '../component/user/UserAvatar.pug'
+	import UserInfo from '../component/user/UserInfo.pug'
 
 	export feed = null
 	export post = null
