--- a/src/ui/layout/LayoutHome.pug
+++ b/src/ui/layout/LayoutHome.pug
@@ -1,10 +1,10 @@
 script.
 	import { getContext } from 'svelte'
 
-	import api from '../api/index.js'
+	import api from '../../api/index.js'
 
-	import Status from './component/generic/Status.pug'
-	import SubredditAvatar from './component/subreddit/SubredditAvatar.pug'
+	import Status from '../component/generic/Status.pug'
+	import SubredditAvatar from '../component/subreddit/SubredditAvatar.pug'
 
 	MAX_SUBREDDITS = 100
 
