--- a/src/ui/layout/overlay/OverlayThemeProvider.pug
+++ b/src/ui/layout/overlay/OverlayThemeProvider.pug
@@ -1,7 +1,7 @@
 script.
 	import { setContext } from 'svelte'
 	
-	import { HexColor } from '../../lib/index.js'
+	import { HexColor } from '../../../lib/index.js'
 
 	DEFAULT_COLOR = '#ffffff'
 
